@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: pslib.c,v 1.168 2008-03-24 08:58:32 guru Exp $
+ *	$Id: pslib.c,v 1.169 2008-03-29 20:49:25 guru Exp $
  *
  *	Copyright (c) 1991-2008 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -1229,7 +1229,7 @@ int ps_plotinit (char *plotfile, int overlay, int mode, double xoff, double yoff
 
 	if ((PSL = (struct PSL *) ps_memory (VNULL, 1L, sizeof (struct PSL))) == NULL) {
 		fprintf (stderr, "PSL Fatal Error: Could not allocate PSL control structure!\n");
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	/* Save original initialization settings */
@@ -1448,7 +1448,7 @@ int ps_plotinit (char *plotfile, int overlay, int mode, double xoff, double yoff
 		}
 		else {
 			fprintf (stderr, "pslib: Measure unit not valid!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 
 		xscl *= scl;
@@ -2820,7 +2820,7 @@ void ps_words (double x, double y, char **text, PS_LONG n_words, double line_spa
 			break;
 		default:
 			fprintf (stderr, "%s: Bad paragraph justification (%c) - Exiting\n", "pslib", (int)par_just);
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 	}
 
 	/* Time to write out to PS file */
@@ -3348,14 +3348,14 @@ unsigned char *ps_load_image (char *file, struct imageinfo *h)
 
 	if ((fp = fopen (file, "rb")) == NULL) {
 		fprintf (stderr, "pslib: Cannot open image file %s!\n", file);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	/* Read magic number to determine image type */
 
 	if (ps_read_rasheader (fp, h, 0, 0)) {
 		fprintf (stderr, "pslib: Error reading magic number of image file %s!\n", file);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 	fseek (fp, 0L, SEEK_SET);
 
@@ -3367,7 +3367,7 @@ unsigned char *ps_load_image (char *file, struct imageinfo *h)
 		return (ps_load_eps (fp, h));
 	} else {
 		fprintf (stderr, "pslib: Unrecognised magic number 0x%x in file %s!\n", h->magic, file);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	return (0);	/* Dummy return to satisfy some compilers */
@@ -3422,16 +3422,16 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 
 	if (ps_read_rasheader (fp, header, 0, 7)) {
 		fprintf (stderr, "pslib: Trouble reading Sun rasterfile header!\n");
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	if (header->magic != RAS_MAGIC) {	/* Not a Sun rasterfile */
 		fprintf (stderr, "pslib: Raster is not a Sun rasterfile (Magic # = 0x%x)!\n", header->magic);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 	if (header->type < RT_OLD || header->type > RT_FORMAT_RGB) {
 		fprintf (stderr, "pslib: Can only read Sun rasterfiles types %d - %d (your type = %d)!\n", RT_OLD, RT_FORMAT_RGB, header->type);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	buffer = entry = red = green = blue = (unsigned char *)NULL;
@@ -3443,7 +3443,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)buffer, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 1-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &buffer);
 
@@ -3458,7 +3458,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)buffer, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 8-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &buffer);
 	}
@@ -3478,7 +3478,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		entry = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)entry, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 8-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &entry);
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)(3 * header->width * header->height), sizeof (unsigned char));
@@ -3509,7 +3509,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)buffer, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 24-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &buffer);
 		oddlength = 3 * header->width;
@@ -3530,7 +3530,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)buffer, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 24-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &buffer);
 		oddlength = 3 * header->width;
@@ -3562,7 +3562,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)buffer, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 32-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &buffer);
 		r_off = (header->type == RT_FORMAT_RGB) ? 1 : 3;
@@ -3583,7 +3583,7 @@ unsigned char *ps_load_raster (FILE *fp, struct imageinfo *header)
 		buffer = (unsigned char *) ps_memory (VNULL, (size_t)header->length, sizeof (unsigned char));
 		if (fread ((void *)buffer, (size_t)1, (size_t)header->length, fp) != (size_t)header->length) {
 			fprintf (stderr, "pslib: Trouble reading 32-bit Sun rasterfile!\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		if (header->type == RT_BYTE_ENCODED) ps_rle_decode (header, &buffer);
 		r_off = (header->type == RT_FORMAT_RGB) ? 1 : 3;
@@ -4272,14 +4272,14 @@ void *ps_memory (void *prev_addr, size_t nelem, size_t size)
 		if ((tmp = realloc ((void *) prev_addr, (nelem * size))) == VNULL) {
 			fprintf (stderr, "PSL Fatal Error: Could not reallocate more memory, n = ");
 			PRINT_SIZE_T (stderr, nelem);	fprintf (stderr, "\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 	}
 	else {
 		if ((tmp = calloc ((size_t) nelem, size)) == VNULL) {
 			fprintf (stderr, "PSL Fatal Error: Could not allocate memory, n = \n");
 			PRINT_SIZE_T (stderr, nelem);	fprintf (stderr, "\n");
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 	}
 	return (tmp);
@@ -4324,7 +4324,7 @@ static void ps_bulkcopy (const char *fname, const char *version)
 	if ((in = fopen (fullname, "r")) == NULL) {
 		fprintf (stderr, "PSL Fatal Error: ");
 		perror (fullname);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	while (fgets (buf, BUFSIZ, in)) {
@@ -4370,7 +4370,7 @@ static void ps_init_fonts (int *n_fonts, int *n_GMT_fonts)
 	if ((in = fopen (fullname, "r")) == NULL) {
 		fprintf (stderr, "PSL Fatal Error: ");
 		perror (fullname);
-		exit (EXIT_FAILURE);
+		PS_exit (EXIT_FAILURE);
 	}
 
 	PSL->internal.font = (struct PSL_FONT *) ps_memory (VNULL, (size_t)n_alloc, sizeof (struct PSL_FONT));
@@ -4379,7 +4379,7 @@ static void ps_init_fonts (int *n_fonts, int *n_GMT_fonts)
 		if (buf[0] == '#' || buf[0] == '\n' || buf[0] == '\r') continue;
 		if (sscanf (buf, "%s %lf %d", fullname, &PSL->internal.font[i].height, &PSL->internal.font[i].encoded) != 3) {
 			fprintf (stderr, "PSL Fatal Error: Trouble decoding font info for font %d\n", i);
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 		PSL->internal.font[i].name = (char *)ps_memory (VNULL, (size_t)(strlen (fullname)+1), sizeof (char));
 		strcpy (PSL->internal.font[i].name, fullname);
@@ -4401,7 +4401,7 @@ static void ps_init_fonts (int *n_fonts, int *n_GMT_fonts)
 		{
 			fprintf (stderr, "PSL Fatal Error: ");
 			perror (fullname);
-			exit (EXIT_FAILURE);
+			PS_exit (EXIT_FAILURE);
 		}
 
 		while (fgets (buf, BUFSIZ, in)) {
@@ -4409,7 +4409,7 @@ static void ps_init_fonts (int *n_fonts, int *n_GMT_fonts)
 			PSL->internal.font[i].name = (char *)ps_memory (VNULL, strlen (buf), sizeof (char));
 			if (sscanf (buf, "%s %lf %d", PSL->internal.font[i].name, &PSL->internal.font[i].height, &PSL->internal.font[i].encoded) != 3) {
 				fprintf (stderr, "PSL Fatal Error: Trouble decoding custom font info for font %d\n", i - *n_GMT_fonts);
-				exit (EXIT_FAILURE);
+				PS_exit (EXIT_FAILURE);
 			}
 			i++;
 			if (i == n_alloc) {
